RESOLVED FIXED55703
[GStreamer] When seeking webKitWebSrcStop release the frame but should not.
https://bugs.webkit.org/show_bug.cgi?id=55703
Summary [GStreamer] When seeking webKitWebSrcStop release the frame but should not.
Alexis Menard (darktears)
Reported 2011-03-03 13:27:02 PST
When calling webKitWebSrcStop in case of a seeking, the frame should not be reset (the source hasn't change). The frame may be used to get the network context. Some network stack (like Qt) are relaying on the network context.
Attachments
Proposed patch. (1.54 KB, patch)
2011-03-03 13:28 PST, Alexis Menard (darktears)
no flags
Alexis Menard (darktears)
Comment 1 2011-03-03 13:28:29 PST
Created attachment 84616 [details] Proposed patch.
Philippe Normand
Comment 2 2011-03-11 02:16:55 PST
This patch looks harmless :) I tested it on GTK, runned the media tests fine and did testing on Vimeo and Youtube and had no problem. The frame will now only be released on seek errors and in the PAUSED to READY transition, which sounds fine to me.
Philippe Normand
Comment 3 2011-03-11 02:23:52 PST
If the commit-queue lands this it might have issues with the ChangeLog as the patch doesn't seem to be based on HEAD, right?
Alexis Menard (darktears)
Comment 4 2011-03-11 03:15:19 PST
(In reply to comment #3) > If the commit-queue lands this it might have issues with the ChangeLog as the patch doesn't seem to be based on HEAD, right? I don't think so. It has some magic stuff for the changelogs :)
Philippe Normand
Comment 5 2011-03-11 04:05:02 PST
CCing possible reviewers
WebKit Commit Bot
Comment 6 2011-03-11 09:09:45 PST
Comment on attachment 84616 [details] Proposed patch. Clearing flags on attachment: 84616 Committed r80854: <http://trac.webkit.org/changeset/80854>
WebKit Commit Bot
Comment 7 2011-03-11 09:09:49 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.